--- a/.github/workflows/ftp-deploy.yml
+++ b/.github/workflows/ftp-deploy.yml
@@ -2,7 +2,7 @@ name: FTP Deploy
 on:
   push:
     branches:
-      - master # or main, depending on your default branch
+      - main # or main, depending on your default branch
 
 jobs:
   ftp-deploy:
@@ -15,6 +15,7 @@ jobs:
       - name: FTP Deploy
         uses: SamKirkland/FTP-Deploy-Action@4.1.0
         with:
-          ftp-server: ftpupload.net/public_html
+          ftp-server: ftpupload.net
           ftp-username: ${{ secrets.FTP_USERNAME }}
           ftp-password: ${{ secrets.FTP_PASSWORD }}
+           server-dir: public_html/
