--- a/.github/workflows/ftp-deploy.yml
+++ b/.github/workflows/ftp-deploy.yml
@@ -18,4 +18,5 @@ jobs:
           ftp-server: ftpupload.net
           ftp-username: ${{ secrets.FTP_USERNAME }}
           ftp-password: ${{ secrets.FTP_PASSWORD }}
-          server-dir: public_html/
+          server-dir: /htdocs/public_html
+
